--- a/archives/toutiao-search/2024-04-15.md
+++ b/archives/toutiao-search/2024-04-15.md
@@ -1,59 +1,77 @@
 # 2024-04-15
 
-共 256 条
+共 270 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 15 2024 20:10:59 GMT+0800 (China Standard Time) -->
-1. [美炒作“中国网络攻击威胁”实为栽赃](https://so.toutiao.com/search?keyword=美炒作“中国网络攻击威胁”实为栽赃)
+<!-- 最后更新时间 Mon Apr 15 2024 21:00:49 GMT+0800 (China Standard Time) -->
+1. [李显龙吁请新加坡人全力支持黄循财](https://so.toutiao.com/search?keyword=李显龙吁请新加坡人全力支持黄循财)
 1. [献血13次妻子用血遇阻 评论区热议](https://so.toutiao.com/search?keyword=献血13次妻子用血遇阻+评论区热议)
 1. [今天是全民国家安全教育日](https://so.toutiao.com/search?keyword=今天是全民国家安全教育日)
 1. [阿姨吐槽年轻人卧铺挂帘子不让老人坐](https://so.toutiao.com/search?keyword=阿姨吐槽年轻人卧铺挂帘子不让老人坐)
-1. [女童遭烈犬撕咬 狗主人或被追刑责](https://so.toutiao.com/search?keyword=女童遭烈犬撕咬+狗主人或被追刑责)
+1. [即将接任新加坡总理的黄循财是谁](https://so.toutiao.com/search?keyword=即将接任新加坡总理的黄循财是谁)
 1. [济南失联研三学生遗体被找到](https://so.toutiao.com/search?keyword=济南失联研三学生遗体被找到)
-1. [86岁老人隆重仪式迎娶初恋女友](https://so.toutiao.com/search?keyword=86岁老人隆重仪式迎娶初恋女友)
-1. [老板坠入化粪池 6人施救均遇难](https://so.toutiao.com/search?keyword=老板坠入化粪池+6人施救均遇难)
-1. [中方敦促美立即停止对中国网络攻击](https://so.toutiao.com/search?keyword=中方敦促美立即停止对中国网络攻击)
+1. [女童遭烈犬撕咬 狗主人或被追刑责](https://so.toutiao.com/search?keyword=女童遭烈犬撕咬+狗主人或被追刑责)
+1. [71岁保洁被开除后在物业办公室自杀](https://so.toutiao.com/search?keyword=71岁保洁被开除后在物业办公室自杀)
+1. [胖东来“爆改”长沙本土步步高超市](https://so.toutiao.com/search?keyword=胖东来“爆改”长沙本土步步高超市)
 1. [“三星堆挖出酷似飞碟青铜器”不实](https://so.toutiao.com/search?keyword=“三星堆挖出酷似飞碟青铜器”不实)
 1. [女生称一个人来演唱会 旁边男生愣了](https://so.toutiao.com/search?keyword=女生称一个人来演唱会+旁边男生愣了)
+1. [赖清德就职在即 民众：台湾要废了](https://so.toutiao.com/search?keyword=赖清德就职在即+民众：台湾要废了)
 1. [白宫：伊朗不打了以色列也不想报复](https://so.toutiao.com/search?keyword=白宫：伊朗不打了以色列也不想报复)
+1. [朔尔茨：德国市场欢迎中国汽车](https://so.toutiao.com/search?keyword=朔尔茨：德国市场欢迎中国汽车)
+1. [牺牲民警蓝制服被血染成红色](https://so.toutiao.com/search?keyword=牺牲民警蓝制服被血染成红色)
+1. [南京胖哥为离世女儿销户](https://so.toutiao.com/search?keyword=南京胖哥为离世女儿销户)
+1. [86岁老人隆重仪式迎娶初恋女友](https://so.toutiao.com/search?keyword=86岁老人隆重仪式迎娶初恋女友)
 1. [朔尔茨：赴华德国人变多了是好消息](https://so.toutiao.com/search?keyword=朔尔茨：赴华德国人变多了是好消息)
-1. [泽连斯基：乌军有部队主动放弃阵地](https://so.toutiao.com/search?keyword=泽连斯基：乌军有部队主动放弃阵地)
 1. [以方称希望俄谴责伊朗袭击 俄回应](https://so.toutiao.com/search?keyword=以方称希望俄谴责伊朗袭击+俄回应)
-1. [供电所领导被举报勾引已婚女士](https://so.toutiao.com/search?keyword=供电所领导被举报勾引已婚女士)
-1. [即将接任新加坡总理的黄循财是谁](https://so.toutiao.com/search?keyword=即将接任新加坡总理的黄循财是谁)
-1. [孩子理发138元妈妈只愿付24元](https://so.toutiao.com/search?keyword=孩子理发138元妈妈只愿付24元)
-1. [华为P系列改名Pura怎么读](https://so.toutiao.com/search?keyword=华为P系列改名Pura怎么读)
 1. [大姐向佛祖告状的普陀山香花券免了](https://so.toutiao.com/search?keyword=大姐向佛祖告状的普陀山香花券免了)
 1. [反击醉汉学生到底是不是正当防卫](https://so.toutiao.com/search?keyword=反击醉汉学生到底是不是正当防卫)
-1. [南京胖哥为离世女儿销户](https://so.toutiao.com/search?keyword=南京胖哥为离世女儿销户)
-1. [李显龙5月将辞去新加坡总理职务](https://so.toutiao.com/search?keyword=李显龙5月将辞去新加坡总理职务)
-1. [71岁保洁被开除后在物业办公室自杀](https://so.toutiao.com/search?keyword=71岁保洁被开除后在物业办公室自杀)
 1. [小孩跪地祈祷后屋顶玩具真掉下来了](https://so.toutiao.com/search?keyword=小孩跪地祈祷后屋顶玩具真掉下来了)
+1. [医院称引进遭举报嫖娼医生正常合规](https://so.toutiao.com/search?keyword=医院称引进遭举报嫖娼医生正常合规)
+1. [泽连斯基：乌军有部队主动放弃阵地](https://so.toutiao.com/search?keyword=泽连斯基：乌军有部队主动放弃阵地)
+1. [范波任山东省委常委](https://so.toutiao.com/search?keyword=范波任山东省委常委)
+1. [老板坠入化粪池 6人施救均遇难](https://so.toutiao.com/search?keyword=老板坠入化粪池+6人施救均遇难)
+1. [特斯拉全球裁员10%](https://so.toutiao.com/search?keyword=特斯拉全球裁员10%)
+1. [妇联回应湖南街头疑有怀孕流浪女](https://so.toutiao.com/search?keyword=妇联回应湖南街头疑有怀孕流浪女)
 1. [广东一大桥施工时倒塌 2死1伤1失联](https://so.toutiao.com/search?keyword=广东一大桥施工时倒塌+2死1伤1失联)
-1. [伊朗大使馆发文讽刺以色列](https://so.toutiao.com/search?keyword=伊朗大使馆发文讽刺以色列)
-1. [网友分享献血用血经历](https://so.toutiao.com/search?keyword=网友分享献血用血经历)
+1. [华为P系列改名Pura怎么读](https://so.toutiao.com/search?keyword=华为P系列改名Pura怎么读)
+1. [山西两姐妹失联2天 多方紧急寻人](https://so.toutiao.com/search?keyword=山西两姐妹失联2天+多方紧急寻人)
+1. [医生被撤职后有资格重操旧业吗](https://so.toutiao.com/search?keyword=医生被撤职后有资格重操旧业吗)
 1. [黄金回收价突破600元/克大关](https://so.toutiao.com/search?keyword=黄金回收价突破600元/克大关)
-1. [美专家：至少7枚导弹击中以军基地](https://so.toutiao.com/search?keyword=美专家：至少7枚导弹击中以军基地)
+1. [保洁阿姨扫走食物遭大鹅抗议](https://so.toutiao.com/search?keyword=保洁阿姨扫走食物遭大鹅抗议)
+1. [以色列遭袭 乌总统称“感同身受”](https://so.toutiao.com/search?keyword=以色列遭袭+乌总统称“感同身受”)
+1. [考点回应男生体考骨折爬到终点](https://so.toutiao.com/search?keyword=考点回应男生体考骨折爬到终点)
+1. [女子遛狗不牵绳被提醒后态度嚣张](https://so.toutiao.com/search?keyword=女子遛狗不牵绳被提醒后态度嚣张)
+1. [女子在海南骑沙滩车侧翻身亡](https://so.toutiao.com/search?keyword=女子在海南骑沙滩车侧翻身亡)
+1. [渔民打捞出某国新型水下窃密装置](https://so.toutiao.com/search?keyword=渔民打捞出某国新型水下窃密装置)
+1. [孩子理发138元妈妈只愿付24元](https://so.toutiao.com/search?keyword=孩子理发138元妈妈只愿付24元)
+1. [网友分享献血用血经历](https://so.toutiao.com/search?keyword=网友分享献血用血经历)
+1. [官方回应婆婆杀害儿媳3只狗](https://so.toutiao.com/search?keyword=官方回应婆婆杀害儿媳3只狗)
+1. [美媒：拜登支持率与特朗普仅差1%](https://so.toutiao.com/search?keyword=美媒：拜登支持率与特朗普仅差1%)
 1. [游客参观他人免费开放的祖宅嫌难看](https://so.toutiao.com/search?keyword=游客参观他人免费开放的祖宅嫌难看)
-1. [美国催盟友遏制中国芯片 德方回应](https://so.toutiao.com/search?keyword=美国催盟友遏制中国芯片+德方回应)
+1. [老小区申请原拆原建超7成居民同意](https://so.toutiao.com/search?keyword=老小区申请原拆原建超7成居民同意)
 1. [车内摄像头拍摄色情图片？理想回应](https://so.toutiao.com/search?keyword=车内摄像头拍摄色情图片？理想回应)
+1. [《承欢记》弹幕互动量破纪录](https://so.toutiao.com/search?keyword=《承欢记》弹幕互动量破纪录)
+1. [马朝旭会见美外交官员 谈及中东问题](https://so.toutiao.com/search?keyword=马朝旭会见美外交官员+谈及中东问题)
+1. [女子坐公交被拉车窗泼水还被司机骂](https://so.toutiao.com/search?keyword=女子坐公交被拉车窗泼水还被司机骂)
+1. [俄军在恰索夫亚尔与乌军展开激战](https://so.toutiao.com/search?keyword=俄军在恰索夫亚尔与乌军展开激战)
+1. [美炒作“中国网络攻击威胁”实为栽赃](https://so.toutiao.com/search?keyword=美炒作“中国网络攻击威胁”实为栽赃)
+1. [中方敦促美立即停止对中国网络攻击](https://so.toutiao.com/search?keyword=中方敦促美立即停止对中国网络攻击)
+1. [供电所领导被举报勾引已婚女士](https://so.toutiao.com/search?keyword=供电所领导被举报勾引已婚女士)
+1. [李显龙5月将辞去新加坡总理职务](https://so.toutiao.com/search?keyword=李显龙5月将辞去新加坡总理职务)
+1. [伊朗大使馆发文讽刺以色列](https://so.toutiao.com/search?keyword=伊朗大使馆发文讽刺以色列)
+1. [美专家：至少7枚导弹击中以军基地](https://so.toutiao.com/search?keyword=美专家：至少7枚导弹击中以军基地)
+1. [美国催盟友遏制中国芯片 德方回应](https://so.toutiao.com/search?keyword=美国催盟友遏制中国芯片+德方回应)
 1. [洪金宝被老婆严控饮食自嘲营养不良](https://so.toutiao.com/search?keyword=洪金宝被老婆严控饮食自嘲营养不良)
 1. [乌克兰东部局势“严重恶化”](https://so.toutiao.com/search?keyword=乌克兰东部局势“严重恶化”)
 1. [华为P70样机或于下周到店](https://so.toutiao.com/search?keyword=华为P70样机或于下周到店)
 1. [大V：重庆燃气频繁换计量表有猫腻吗](https://so.toutiao.com/search?keyword=大V：重庆燃气频繁换计量表有猫腻吗)
-1. [官方回应婆婆杀害儿媳3只狗](https://so.toutiao.com/search?keyword=官方回应婆婆杀害儿媳3只狗)
-1. [范波任山东省委常委](https://so.toutiao.com/search?keyword=范波任山东省委常委)
 1. [以色列军方拦截成功率高原因何在](https://so.toutiao.com/search?keyword=以色列军方拦截成功率高原因何在)
-1. [俄军在恰索夫亚尔与乌军展开激战](https://so.toutiao.com/search?keyword=俄军在恰索夫亚尔与乌军展开激战)
-1. [女子遛狗不牵绳被提醒后态度嚣张](https://so.toutiao.com/search?keyword=女子遛狗不牵绳被提醒后态度嚣张)
 1. [胡广杰任江苏省委常委](https://so.toutiao.com/search?keyword=胡广杰任江苏省委常委)
 1. [伊朗再次警告美国勿插手伊以冲突](https://so.toutiao.com/search?keyword=伊朗再次警告美国勿插手伊以冲突)
 1. [名嘴断言赖清德新行政团队“死期”](https://so.toutiao.com/search?keyword=名嘴断言赖清德新行政团队“死期”)
 1. [梁朝伟第六次获得金像奖影帝](https://so.toutiao.com/search?keyword=梁朝伟第六次获得金像奖影帝)
-1. [特斯拉全球裁员10%](https://so.toutiao.com/search?keyword=特斯拉全球裁员10%)
 1. [北京一彩票店单期开出过亿奖金](https://so.toutiao.com/search?keyword=北京一彩票店单期开出过亿奖金)
 1. [德国汽车工业协会警告欧盟](https://so.toutiao.com/search?keyword=德国汽车工业协会警告欧盟)
-1. [美媒：拜登支持率与特朗普仅差1%](https://so.toutiao.com/search?keyword=美媒：拜登支持率与特朗普仅差1%)
 1. [1人坠入化粪池 6人施救均遇难](https://so.toutiao.com/search?keyword=1人坠入化粪池+6人施救均遇难)
 1. [女子自称一个人来看薛之谦演唱会](https://so.toutiao.com/search?keyword=女子自称一个人来看薛之谦演唱会)
 1. [A股指数大涨 超4000只个股下跌](https://so.toutiao.com/search?keyword=A股指数大涨+超4000只个股下跌)
@@ -76,7 +94,6 @@
 1. [俄军苏-34轰炸乌军指挥部画面曝光](https://so.toutiao.com/search?keyword=俄军苏-34轰炸乌军指挥部画面曝光)
 1. [河南机构精简后各地会跟进吗](https://so.toutiao.com/search?keyword=河南机构精简后各地会跟进吗)
 1. [单挑悉尼持刀行凶者男子系法国人](https://so.toutiao.com/search?keyword=单挑悉尼持刀行凶者男子系法国人)
-1. [老小区申请原拆原建超7成居民同意](https://so.toutiao.com/search?keyword=老小区申请原拆原建超7成居民同意)
 1. [以称将在合适的时机让伊朗付出代价](https://so.toutiao.com/search?keyword=以称将在合适的时机让伊朗付出代价)
 1. [男生去接女朋友的路上偶遇樱花雨](https://so.toutiao.com/search?keyword=男生去接女朋友的路上偶遇樱花雨)
 1. [女子一个人来看薛之谦演唱会](https://so.toutiao.com/search?keyword=女子一个人来看薛之谦演唱会)
@@ -84,7 +101,6 @@
 1. [网友吐槽小区坐电梯要交钱](https://so.toutiao.com/search?keyword=网友吐槽小区坐电梯要交钱)
 1. [美媒要求拜登与特朗普进行总统辩论](https://so.toutiao.com/search?keyword=美媒要求拜登与特朗普进行总统辩论)
 1. [老人被家人用三轮拉到银行取存款](https://so.toutiao.com/search?keyword=老人被家人用三轮拉到银行取存款)
-1. [女子坐公交被拉车窗泼水还被司机骂](https://so.toutiao.com/search?keyword=女子坐公交被拉车窗泼水还被司机骂)
 1. [华为官宣P系列品牌升级为Pura](https://so.toutiao.com/search?keyword=华为官宣P系列品牌升级为Pura)
 1. [全新腾势N7测评](https://so.toutiao.com/search?keyword=全新腾势N7测评)
 1. [美官员：伊朗至少9枚导弹命中目标](https://so.toutiao.com/search?keyword=美官员：伊朗至少9枚导弹命中目标)
@@ -109,7 +125,6 @@
 1. [泼水节整活还得看大学生](https://so.toutiao.com/search?keyword=泼水节整活还得看大学生)
 1. [黄渤组队参加西双版纳泼水节](https://so.toutiao.com/search?keyword=黄渤组队参加西双版纳泼水节)
 1. [家人聚餐 萌娃一脚踩开水管](https://so.toutiao.com/search?keyword=家人聚餐+萌娃一脚踩开水管)
-1. [保洁阿姨扫走食物遭大鹅抗议](https://so.toutiao.com/search?keyword=保洁阿姨扫走食物遭大鹅抗议)
 1. [西双版纳来了一亿人吧](https://so.toutiao.com/search?keyword=西双版纳来了一亿人吧)
 1. [G7对伊朗发出制裁威胁](https://so.toutiao.com/search?keyword=G7对伊朗发出制裁威胁)
 1. [内蒙古人大常委会原副主任杜梓被查](https://so.toutiao.com/search?keyword=内蒙古人大常委会原副主任杜梓被查)
@@ -148,7 +163,6 @@
 1. [男生体考受伤站不起来爬向终点](https://so.toutiao.com/search?keyword=男生体考受伤站不起来爬向终点)
 1. [高盛：黄金处于不可动摇的牛市中](https://so.toutiao.com/search?keyword=高盛：黄金处于不可动摇的牛市中)
 1. [女子登山途中倒走拍摄险摔倒](https://so.toutiao.com/search?keyword=女子登山途中倒走拍摄险摔倒)
-1. [牺牲民警蓝制服被血染成红色](https://so.toutiao.com/search?keyword=牺牲民警蓝制服被血染成红色)
 1. [真实案例中的间谍有哪些伪装](https://so.toutiao.com/search?keyword=真实案例中的间谍有哪些伪装)
 1. [骑车老人被男子推倒后离世？假的](https://so.toutiao.com/search?keyword=骑车老人被男子推倒后离世？假的)
 1. [保时捷中国总裁首度回应“米时捷”](https://so.toutiao.com/search?keyword=保时捷中国总裁首度回应“米时捷”)
